FIx overflow behavior for tab-containers and select components

--- a/app/styles/ui/_commit-message-avatar.scss
+++ b/app/styles/ui/_commit-message-avatar.scss
@@ -48,10 +48,6 @@
     color: var(--text-secondary-color);
   }
 
-  .select-component {
-    overflow: hidden;
-  }
-
   .popover-component {
     // This allows for using <Rows> to structure content within dialog content.
     // All Rows that are direct descendants of dialog content except for the
