--- a/app/styles/ui/_tab-bar.scss
+++ b/app/styles/ui/_tab-bar.scss
@@ -3,6 +3,10 @@
   flex-direction: row;
   height: var(--tab-bar-height);
 
+  .tab-container {
+    overflow: hidden;
+  }
+
   &.vertical {
     flex-direction: column;
     align-items: stretch;
